--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,8 @@ Description: This package is used for data analysis at Data 516 Workstudio.
 License: file LICENSE
 LazyData: TRUE
 RoxygenNote: 5.0.1
+Depends:
+    R (>= 3.3.1)
+Imports:
+    readr,
+    utils
